--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:layout_height="54dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -17,7 +17,7 @@
             android:text="@string/str_signin"
             android:id="@+id/txt_signin"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true" />
@@ -52,6 +52,7 @@
             android:ems="10"
             android:hint="@string/str_hint_email"
             android:textColor="@android:color/black"
+            android:backgroundTint="@android:color/transparent"
             android:textColorHint="@android:color/darker_gray"
             android:inputType="textEmailAddress" />
 
@@ -62,6 +63,7 @@
             android:background="@android:color/darker_gray" />
 
         <RelativeLayout
+            android:id="@+id/layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -75,8 +77,9 @@
                 android:layout_marginBottom="10dp"
                 android:ems="10"
                 android:hint="@string/str_hint_password"
-                android:password="true"
+                android:inputType="textPassword"
                 android:textColor="@android:color/black"
+                android:backgroundTint="@android:color/transparent"
                 android:textColorHint="@android:color/darker_gray"
                 android:layout_toLeftOf="@+id/forgot_password" />
 
@@ -153,7 +156,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="64dp"
+        android:layout_height="54dp"
         android:background="@color/alert_bg_color"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/alert_valid">
@@ -169,7 +172,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/txt_alert"
             android:textColor="@color/white"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:layout_marginLeft="25dp" />
     </LinearLayout>
 </RelativeLayout>
