--- a/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
+++ b/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="54dp"
         android:id="@+id/top_layout">
 
         <TextView
@@ -16,7 +16,7 @@
             android:text="@string/str_signup"
             android:id="@+id/txt_signup_label"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true" />
@@ -39,12 +39,12 @@
         android:id="@+id/txt_hint_string"
         android:gravity="center_horizontal"
         android:textColor="@color/white"
-        android:textSize="22dp"
+        android:textSize="20sp"
         android:layout_below="@+id/top_layout"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp" />
 
     <TextView
         android:layout_width="fill_parent"
