--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -80,26 +80,34 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical">
 
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/editext_padding"
-                        android:ems="10"
-                        android:inputType="textEmailAddress"
-                        android:id="@+id/email"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center" />
-
                     <TextView
                         android:layout_width="wrap_content"
-                        android:paddingBottom="@dimen/label_padding"
                         android:layout_height="wrap_content"
                         android:text="@string/str_signup_hint_email"
                         android:id="@+id/txt_email_label"
                         android:textSize="15sp"
                         android:layout_centerVertical="true" />
 
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:inputType="textEmailAddress"
+                        android:layout_toRightOf="@+id/txt_email_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"
+                        android:id="@+id/email"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center" />
+
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/line1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
