--- a/app/src/main/res/layout/fragment_sign_up_group_desc.xml
+++ b/app/src/main/res/layout/fragment_sign_up_group_desc.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="54dp"
         android:id="@+id/top_layout">
 
         <TextView
@@ -39,12 +39,12 @@
         android:id="@+id/txt_hint_string"
         android:gravity="center_horizontal"
         android:textColor="@color/white"
-        android:textSize="22dp"
+        android:textSize="20sp"
         android:layout_below="@+id/top_layout"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp" />
 
     <LinearLayout
         android:orientation="horizontal"
