--- a/app/src/main/res/layout/fragment_sign_up_home_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_home_address.xml
@@ -81,18 +81,26 @@
                         android:text="107 Liasu Road"
                         android:gravity="center"
                         android:inputType="text"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_address_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_address_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_address"
                         android:textSize="15sp" />
 
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/line"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
@@ -123,14 +131,15 @@
                         android:text="Idimu"
                         android:gravity="center"
                         android:inputType="text"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_city_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_city_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_city"
                         android:textSize="15sp" />
 
@@ -153,14 +162,15 @@
                         android:text="Lagos"
                         android:gravity="center"
                         android:inputType="text"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_state_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_state_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_state"
                         android:textSize="15sp" />
 
@@ -168,6 +178,16 @@
                 </RelativeLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/line1"
+                android:layout_below="@+id/city_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:background="@color/button_material_light"
+                android:layout_marginTop="2dp" />
 
             <LinearLayout
                 android:id="@+id/zipcode_layout"
@@ -194,18 +214,26 @@
                         android:text="100276"
                         android:gravity="center"
                         android:inputType="number"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_zipcode_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_zipcode_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_zip_code"
                         android:textSize="15sp" />
 
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/line2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
