--- a/app/src/main/res/layout/fragment_sign_up_name.xml
+++ b/app/src/main/res/layout/fragment_sign_up_name.xml
@@ -79,17 +79,25 @@
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_firstname_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_firstname_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_first_name"
                         android:textSize="15dp" />
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/line1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
@@ -116,17 +124,25 @@
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_lastname_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_lastname_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_last_name"
                         android:textSize="15dp" />
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/line"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
