--- a/app/src/main/res/layout/fragment_sign_up_office_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_office_address.xml
@@ -81,18 +81,26 @@
                         android:text="k3 Eric moore"
                         android:gravity="center"
                         android:inputType="text"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_address_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_address_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_address"
                         android:textSize="15sp" />
 
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/line"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
@@ -123,17 +131,17 @@
                         android:text="Surulere"
                         android:gravity="center"
                         android:inputType="text"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_city_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_city_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_city"
                         android:textSize="15sp" />
-
 
                 </RelativeLayout>
 
@@ -153,27 +161,36 @@
                         android:gravity="center"
                         android:text="Lagos"
                         android:inputType="text"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_state_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_state_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_state"
                         android:textSize="15sp" />
-
-
                 </RelativeLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/line1"
+                android:layout_below="@+id/city_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:background="@color/button_material_light"
+                android:layout_marginTop="2dp" />
 
             <LinearLayout
                 android:id="@+id/zipcode_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/city_layout"
+                android:layout_below="@+id/line1"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="15dp"
@@ -181,7 +198,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -194,29 +211,39 @@
                         android:gravity="center"
                         android:text="101283"
                         android:inputType="number"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_zipcode_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"/>
 
                     <TextView
                         android:id="@+id/txt_zipcode_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_zip_code"
                         android:textSize="15sp" />
 
                 </RelativeLayout>
 
+                <View
+                    android:id="@+id/line2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
+
+
             </LinearLayout>
+
 
             <!--  checkbox -->
             <LinearLayout
                 android:id="@+id/checkbox_layout"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/zipcode_layout"
                 android:layout_marginTop="15dp"
-                android:gravity="center_vertical|center_horizontal"
+                android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
                 <ImageView
