--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -105,20 +105,28 @@
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
-                        android:inputType="textPassword"
-                        android:paddingBottom="@dimen/editext_padding"/>
+                        android:layout_toRightOf="@+id/txt_password_label"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="@android:color/transparent"
+                        android:inputType="textPassword"/>
 
                     <TextView
                         android:id="@+id/txt_password_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_signup_hint_password"
                         android:textSize="15dp" />
 
 
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/line1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/button_material_light"
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
         </RelativeLayout>
