--- a/app/src/main/res/layout/fragment_sign_up_verify_code.xml
+++ b/app/src/main/res/layout/fragment_sign_up_verify_code.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="54dp"
         android:id="@+id/top_layout">
 
         <TextView
@@ -15,7 +15,7 @@
             android:text="@string/str_signup_hint19"
             android:id="@+id/txt_signup_label"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true" />
