--- a/app/src/main/res/layout/territory_list_item.xml
+++ b/app/src/main/res/layout/territory_list_item.xml
@@ -19,10 +19,10 @@
             android:gravity="center_vertical">
 
             <TextView
-                android:layout_width="120dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_territory_item_label"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:layout_centerVertical="true" />
 
             <EditText
@@ -34,6 +34,7 @@
                 android:layout_toRightOf="@+id/txt_territory_item_label"
                 android:layout_marginLeft="10dp"
                 android:layout_toLeftOf="@+id/img_add"
+                android:backgroundTint="@android:color/transparent"
                 android:layout_marginRight="10dp">
 
                 <requestFocus />
