--- a/app/src/main/res/layout/fragment_sign_up_add_boss.xml
+++ b/app/src/main/res/layout/fragment_sign_up_add_boss.xml
@@ -57,7 +57,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
 
             <RelativeLayout
@@ -70,11 +70,11 @@
                 android:layout_marginTop="15dp">
 
                 <TextView
-                    android:layout_width="90dp"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:text="@string/str_email"
-                    android:id="@+id/txt_lastname_label_label"
-                    android:textSize="15dp"
+                    android:id="@+id/txt_email_label"
+                    android:textSize="15sp"
                     android:layout_centerVertical="true" />
 
                 <EditText
@@ -82,10 +82,22 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:id="@+id/email"
+                    android:layout_toLeftOf="@+id/user_picture"
+                    android:layout_toRightOf="@+id/txt_email_label"
                     android:inputType="textEmailAddress"
+                    android:layout_marginLeft="5dp"
                     android:backgroundTint="@android:color/transparent"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_toRightOf="@+id/txt_lastname_label_label" />
+                    android:layout_gravity="center_horizontal" />
+
+                <com.tied.android.tiedapp.util.CircularImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/user_picture"
+                    android:layout_alignParentRight="true"
+                    android:background="@mipmap/default_avatar"
+                    app:border="false"
+                    app:border_color="@android:color/transparent"
+                    app:shadow="false"/>
             </RelativeLayout>
 
             <TextView
@@ -106,7 +118,7 @@
                 android:layout_marginTop="15dp">
 
                 <TextView
-                    android:layout_width="90dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:text="@string/str_address"
                     android:id="@+id/txt_address_label"
@@ -148,7 +160,7 @@
                     android:gravity="center_vertical">
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="40dp"
                         android:layout_height="wrap_content"
                         android:text="@string/str_city"
                         android:id="@+id/txt_city_label"
