--- a/app/src/main/res/layout/fragment_sign_up_co_worker.xml
+++ b/app/src/main/res/layout/fragment_sign_up_co_worker.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="54dp"
         android:id="@+id/top_layout">
 
         <TextView
@@ -16,7 +16,7 @@
             android:text="@string/str_signup"
             android:id="@+id/txt_signup_label"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true" />
@@ -35,16 +35,16 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/str_signup_hint13"
+        android:text="@string/str_signup_co_worker"
         android:id="@+id/txt_hint_string"
         android:gravity="center_horizontal"
         android:textColor="@color/white"
-        android:textSize="22dp"
+        android:textSize="20sp"
         android:layout_below="@+id/top_layout"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="20dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp" />
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -70,10 +70,10 @@
                 android:layout_marginTop="15dp">
 
                 <TextView
-                    android:layout_width="90dp"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:text="@string/str_email"
-                    android:id="@+id/txt_lastname_label_label"
+                    android:id="@+id/txt_email_label"
                     android:textSize="15dp"
                     android:layout_centerVertical="true" />
 
@@ -81,10 +81,33 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:layout_toLeftOf="@+id/user_picture"
+                    android:layout_toRightOf="@+id/txt_email_label"
+                    android:inputType="textEmailAddress"
+                    android:layout_marginLeft="5dp"
+                    android:backgroundTint="@android:color/transparent"
                     android:id="@+id/email"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_toRightOf="@+id/txt_lastname_label_label" />
+                    android:layout_gravity="center_horizontal"/>
+
+                <com.tied.android.tiedapp.util.CircularImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/user_picture"
+                    android:layout_alignParentRight="true"
+                    android:background="@mipmap/default_avatar"
+                    app:border="false"
+                    app:border_color="@android:color/transparent"
+                    app:shadow="false"/>
+
             </RelativeLayout>
+            <TextView
+                android:id="@+id/line"
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/button_material_light"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp" />
 
             <RelativeLayout
                 android:orientation="horizontal"
@@ -108,6 +131,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:id="@+id/name"
+                    android:backgroundTint="@android:color/transparent"
                     android:layout_gravity="center_horizontal"
                     android:layout_toRightOf="@+id/txt_name_label_label" />
             </RelativeLayout>
@@ -116,7 +140,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
                 android:background="@color/button_material_light"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp" />
 
@@ -143,6 +167,7 @@
                     android:ems="10"
                     android:id="@+id/street"
                     android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@android:color/transparent"
                     android:layout_toRightOf="@+id/txt_address_label" />
             </RelativeLayout>
 
@@ -151,7 +176,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
                 android:background="@color/button_material_light"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp" />
 
@@ -171,7 +196,7 @@
                     android:gravity="center_vertical">
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="40dp"
                         android:layout_height="wrap_content"
                         android:text="@string/str_city"
                         android:id="@+id/txt_city_label"
@@ -184,6 +209,7 @@
                         android:ems="10"
                         android:id="@+id/city"
                         android:layout_gravity="center_horizontal"
+                        android:backgroundTint="@android:color/transparent"
                         android:layout_toRightOf="@+id/txt_city_label"
                         android:layout_toLeftOf="@+id/txt_state_label" />
 
@@ -200,6 +226,7 @@
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:id="@+id/state"
+                        android:backgroundTint="@android:color/transparent"
                         android:layout_marginLeft="10dp"
                         android:layout_alignParentRight="true"
                         android:gravity="center_horizontal" />
@@ -210,7 +237,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="0.1dp"
                     android:background="@color/button_material_light"
-                    android:layout_marginTop="12dp" />
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
@@ -242,6 +269,7 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:id="@+id/zip"
+                        android:backgroundTint="@android:color/transparent"
                         android:layout_gravity="center_horizontal"
                         android:layout_toRightOf="@+id/txt_zipcode_label"
                         android:inputType="number" />
@@ -252,7 +280,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="0.1dp"
                     android:background="@color/button_material_light"
-                    android:layout_marginTop="12dp" />
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
@@ -284,6 +312,7 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:id="@+id/txt_territory"
+                        android:backgroundTint="@android:color/transparent"
                         android:layout_gravity="center_horizontal"
                         android:layout_toRightOf="@+id/txt_territory_label" />
                 </RelativeLayout>
@@ -293,7 +322,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="0.1dp"
                     android:background="@color/button_material_light"
-                    android:layout_marginTop="12dp" />
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
@@ -325,6 +354,7 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:id="@+id/phone"
+                        android:backgroundTint="@android:color/transparent"
                         android:layout_gravity="center_horizontal"
                         android:layout_toRightOf="@+id/txt_phone_label"
                         android:inputType="number" />
@@ -335,7 +365,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="0.1dp"
                     android:background="@color/button_material_light"
-                    android:layout_marginTop="12dp" />
+                    android:layout_marginTop="2dp" />
 
             </LinearLayout>
 
