--- a/app/src/main/res/layout/fragment_create_schedule.xml
+++ b/app/src/main/res/layout/fragment_create_schedule.xml
@@ -24,7 +24,7 @@
             android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@mipmap/avatar_profile" />
+            android:src="@mipmap/default_avatar" />
 
         <LinearLayout
             android:orientation="horizontal"
