--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -36,6 +36,7 @@
             android:layout_height="35dp"
             android:id="@+id/img_help"
             android:src="@mipmap/btn_help"
+            android:onClick="helpButtonClicked"
             android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" />
@@ -205,7 +206,6 @@
             android:textSize="17dp"
             android:layout_marginLeft="25dp" />
     </LinearLayout>
-
 
 </RelativeLayout>
 
