--- a/app/src/main/res/layout/fragment_sign_up_office_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_office_address.xml
@@ -332,6 +332,14 @@
                     android:textColor="@color/white"
                     android:textSize="15dp" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="7/20"
+                    android:id="@+id/stage"
+                    android:layout_below="@+id/txt_continue_label"
+                    android:layout_centerInParent="true" />
+
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
