--- a/app/src/main/res/layout/fragment_sign_up_office_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_office_address.xml
@@ -26,6 +26,7 @@
             android:id="@+id/img_help"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:onClick="helpButtonClicked"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
