--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -342,7 +342,7 @@
                         android:id="@+id/add"
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
-                        android:layout_alignParentRight="true"
+                        android:layout_gravity="right"
                         android:layout_centerVertical="true"
                         android:src="@mipmap/plus_add" />
 
