--- a/app/src/main/res/layout/fragment_profile_address.xml
+++ b/app/src/main/res/layout/fragment_profile_address.xml
@@ -49,7 +49,7 @@
                     android:id="@+id/txt_title1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:text="OFFICE"
                     android:textColor="@color/schedule_title_bg_color"
                     android:textIsSelectable="false"
@@ -174,7 +174,7 @@
                     android:id="@+id/txt_title2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:text="HOME"
                     android:textColor="@color/schedule_title_bg_color"
                     android:textIsSelectable="false"
