--- a/app/src/main/res/layout/app_dialog.xml
+++ b/app/src/main/res/layout/app_dialog.xml
@@ -27,7 +27,7 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
-        TextView
+        <TextView
             android:id="@+id/negative_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
