--- a/app/src/main/res/layout/fragment_create_line.xml
+++ b/app/src/main/res/layout/fragment_create_line.xml
@@ -172,7 +172,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical">android:textColor="@color/schedule_title_bg_color"
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -188,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="4dp"
                     android:text="ADD DESCRIPTION"
-                    android:textColor="@color/schedule_title_bg_color"
+
                     android:textSize="14sp" />
 
                 <EditText
