--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -67,9 +67,8 @@
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="150dip" />
 
         <LinearLayout
             android:orientation="horizontal"
