--- a/app/src/main/res/layout/fragment_add_activity.xml
+++ b/app/src/main/res/layout/fragment_add_activity.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -10,81 +11,89 @@
         android:background="@color/schedule_title_bg_color">
 
         <TextView
+            android:id="@+id/txt_cancel"
             android:layout_width="80dp"
             android:layout_height="match_parent"
+            android:gravity="center_vertical|center_horizontal"
             android:text="Cancel"
-            android:id="@+id/txt_cancel"
             android:textColor="@color/button_bg"
-            android:textSize="17dp"
-            android:gravity="center_vertical|center_horizontal" />
+            android:textSize="17dp" />
 
         <TextView
+            android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="Add an Activity"
-            android:id="@+id/txt_title"
-            android:textSize="18dp"
-            android:layout_centerInParent="true" />
+            android:textSize="18dp" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical|center_horizontal">
+        android:layout_height="wrap_content"
+        android:paddingTop="50dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/icons" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/schedule_hint_string1"
-            android:textSize="23dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:textColor="@color/colorPrimary" />
+            <ImageView
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:src="@mipmap/icons" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/schedule_hint_string2"
-            android:textSize="19dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="30dp"
-            android:textColor="@color/bright_foreground_disabled_material_light" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="30dp"
+                android:gravity="center_horizontal"
+                android:text="@string/schedule_hint_string1"
+                android:textColor="@color/colorPrimary"
+                android:textSize="23dp" />
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="45dp"
-            android:text="@string/schedule_add_client_btn"
-            android:id="@+id/txt_add_client"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/button_round"
-            android:textColor="@color/white"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:gravity="center_vertical|center_horizontal" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center_horizontal"
+                android:text="@string/schedule_hint_string2"
+                android:textColor="@color/bright_foreground_disabled_material_light"
+                android:textSize="19dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/schedule_hint_string3"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/bright_foreground_disabled_material_light"
-            android:textSize="15dp" />
+            <TextView
+                android:id="@+id/txt_add_client"
+                android:layout_width="fill_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/button_round"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="@string/schedule_add_client_btn"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="40dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center_horizontal"
+                android:text="@string/schedule_hint_string3"
+                android:textColor="@color/bright_foreground_disabled_material_light"
+                android:textSize="15dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
