--- a/app/src/main/res/layout/fragment_schedule_create_employee.xml
+++ b/app/src/main/res/layout/fragment_schedule_create_employee.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/button_bg">
 
         <ImageView
@@ -59,10 +59,76 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/tab_bar"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_below="@+id/name"
+        android:paddingTop="5dp"
+        android:background="#f3f5f6"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="YOU"
+                android:textColor="@color/semi_transparent_black"
+                android:layout_marginBottom="10dp"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <View
+                android:id="@+id/you_tab"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@color/button_bg" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="0.1dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="EMPLOYEES"
+                android:textColor="@color/button_bg"
+                android:layout_marginBottom="10dp"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <View
+                android:id="@+id/emp_tab"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/button_bg" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="50dp">
+        android:paddingTop="50dp"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,7 +139,7 @@
             <ImageView
                 android:layout_width="180dp"
                 android:layout_height="180dp"
-                android:src="@mipmap/icons" />
+                android:src="@mipmap/employee" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -84,9 +150,9 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="45dp"
                 android:gravity="center_horizontal"
-                android:text="@string/schedule_hint_string"
-                android:textColor="@color/semi_transparent_black"
-                android:textSize="20dp" />
+                android:text="@string/schedule_employee_hint_string"
+                android:textColor="@color/schedule_title_bg_color"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/txt_create_schedule"
@@ -96,10 +162,11 @@
                 android:layout_marginRight="20dp"
                 android:background="@drawable/button_round"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="@string/schedule_create_schedule_btn"
+                android:text="@string/schedule_add_employee_btn"
                 android:textColor="@color/white"
                 android:textSize="18dp"
                 android:textStyle="bold" />
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
