--- a/app/src/main/res/layout/fragment_schedule_landing.xml
+++ b/app/src/main/res/layout/fragment_schedule_landing.xml
@@ -46,18 +46,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="58"
+                    android:text="58°"
                     android:textColor="@color/white"
                     android:textSize="40sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="top"
-                    android:text="0"
-                    android:textColor="@color/white"
-                    android:textSize="15sp" />
 
             </LinearLayout>
 
