--- a/app/src/main/res/layout/schedule_clients_suggestion_list_item.xml
+++ b/app/src/main/res/layout/schedule_clients_suggestion_list_item.xml
@@ -9,10 +9,10 @@
         android:id="@+id/invite_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp"
+        android:paddingBottom="10dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
-        android:paddingTop="15dp">
+        android:paddingTop="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/pic"
@@ -36,6 +36,8 @@
                 android:id="@+id/name"
                 android:textColor="@color/schedule_title_bg_color"
                 android:text="Emmanuel Tope"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textStyle="bold"
                 android:textSize="15sp" />
 
@@ -43,6 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/address"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="@color/schedule_title_bg_color"
                 android:text="San Francisco CA"
                 android:textSize="13sp" />
